<resources>
    <string name="app_name">fastcampus_14</string>
    <string name="home_text">홈</string>
    <string name="chat_text">채팅</string>
    <string name="my_page_text">나의 정보</string>
    <string name="home_fragment_actionbar_text">중고 거래</string>
    <string name="submit_btn_text">등록하기</string>
    <string name="title_hint_text">글 제목</string>
    <string name="price_hint_text">가격</string>
    <string name="add_image_btn_text">이미지 등록</string>
    <string name="email_hint_text">이메일</string>
    <string name="password_hint_text">패스워드</string>
    <string name="sign_in_btn_text">로그인</string>
    <string name="sign_up_btn_text">회원가입</string>
    <string name="my_page_toolbar_text">마이 페이지</string>
    <string name="send_text">전송</string>
    <string name="chat_list_text">채팅 목록</string>
    <string name="chat_hint_text">판매자와 거래해보세요!</string>
</resources>